<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestEvent</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="actions">Actions</string>
    <string name="texts">Texts</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="ok">OK</string>
    <string name="collect">Collect</string>
    <string name="discollect">Discollect</string>
    <string name="status">status</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="touch_mode">Touch Mode</string>
    <string name="title_activity_touch">TouchActivity</string>
    <string name="touch_mode_produce">Three times of Back will exist this board</string>
    <string name="volumn_up">V+</string>
    <string name="volumn_down">V-</string>
    <string name="title_activity_test_screen_shot">TestScreenShotActivity</string>
    <string name="screenshot">Screen Shot</string>
    <string name="start_media">media test</string>

</resources>