<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/display_editText"
            android:layout_width="750dip"
            android:layout_height="wrap_content"
            android:inputType="none" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rb_action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actions" />

            <RadioButton
                android:id="@+id/rb_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texts" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_menu"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu" />

            <Button
                android:id="@+id/btn_up"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:text="@string/up" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:text="@string/back" />
            
             <Button
                android:id="@+id/btn_test_media"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:text="@string/start_media" />
             
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_left"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/left" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:text="@string/ok" />

            <Button
                android:id="@+id/btn_right"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:text="@string/right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_volumn_down"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/volumn_down" />

            <Button
                android:id="@+id/btn_down"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:text="@string/down" />

            <Button
                android:id="@+id/btn_volumn_up"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dip"
                android:text="@string/volumn_up" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_collect"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/collect" />

        <Button
            android:id="@+id/btn_discollect"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:text="@string/discollect" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dip"
            android:maxWidth="300dip"
            android:minWidth="150dip"
            android:text="@string/status" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_touch_mode"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/touch_mode" />

    <Button
        android:id="@+id/btn_screenshot_test"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/screenshot" />

</LinearLayout>